--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,3 +16,19 @@
 .hidden {
   visibility: hidden;
 }
+
+.result-div {
+    top:198px;
+    left:365px;
+    width:62px;
+    height:51px;
+    color:white;
+    position:absolute;
+    text-align:center;
+    background-color:black;
+}
+
+.result-div h3 {
+    margin:auto;
+    vertical-align:middle;
+}
